# MyLearning

./: .gitignore
bi_tool/: google data studio.md  power bi.md
coffee/: espresso.md
computer/: build_desktop_pc.md  linux.md  mac.md  network.md  regex.md  rest_api.md
daily_exercise/: log.csv  log.md
english/: EnglishGrammarInUse.md  MeetingPhrases.md  Tangomimi.md  book.md  duo.md  english.md  my_dict.md  native_camp.md  reading-speed.md  writing.md  youtube.md  了解しました表現.md  発音.md
fishing/: MyTheory.md  Trout.md
git/: Git忘備録.md  private.md
keyboard/: diy.md  dz60.json  keychron_k6_pro.json  maja.json  md770_layers.md  nuphy_air75_v2.layout.json
machine_learning/: Annomaly detection.md  Clustering.md  Data Streams Clustering.md  Grid Based Clustering.md  RULについて.md  cartographic_generalization.md  factor_analysis.md  semi-clustering.md  traffic_theory.md  trajectory_inference.md  zero-shot learning.md  時系列ラベリング.md
math/: Pythonではじめる数理最適化.ipynb  algorithm.md  mathematical_optimazation.md
music/: After3years.md  blues.md  code.md  jazz.md  triad.md  基礎理論.md
python/: About Class.md  GPS data processing.md  azure-pipline.md  class_methods.ipynb  general.md  google_earth.md  matplotlib.md  memo.md  multiprocess.md  pandas.md  pipenv.md  plotly.md  pyspark.md  python_env.md  scipy.md  sklearn.ipynb  (+3 more)
python/geo/: pyproject.toml
python/geo/env_wh/: Fiona-1.8.18-cp39-cp39-win_amd64.whl
python/geo/geo/: Untitled.ipynb
python/geo/tests/: test_geo.py
python/pysal/: pyproject.toml
python/pysal/pysal/: tutorial.ipynb
python/pysal/tests/: test_pysal.py
(+18 files in other folders)
