[tool.poetry]
name = "pysal"
version = "0.1.0"
description = ""
authors = ["tea7010 <fieldoftea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.5"
libpysal = "^4.3.5"
geopandas = "^0.8.1"
matplotlib = "^3.3.3"
descartes = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
